--- a/2018/Advent2018.fsproj
+++ b/2018/Advent2018.fsproj
@@ -100,6 +100,13 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Compile Include="d08.fs" />
+    <Content Include="d09.txt" />
+    <Compile Include="d09.fs" />
+    <Content Include="d10.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Compile Include="d10.fs" />
+    <Compile Include="d11.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
     <Content Include="packages.config" />
