--- a/2018/Advent2018.fsproj
+++ b/2018/Advent2018.fsproj
@@ -107,6 +107,13 @@
     </Content>
     <Compile Include="d10.fs" />
     <Compile Include="d11.fs" />
+    <Content Include="d12_initial_state.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="d12_transitions.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Compile Include="d12.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
     <Content Include="packages.config" />
